# quic_obj_disk

./: QNA.md  pyproject.toml
apis/http2_api/: pyproject.toml
apis/http2_api/src/http2_api/: main.py
apis/http3_api/: pyproject.toml
http2_api/: pyproject.toml
http3_api/: main.py  pyproject.toml
kernel/garage/: Cargo.toml  README.md  pyproject.toml
kernel/garage/src/: lib.rs
presentation/: README.md  package-lock.json  project-proposal.html
src/quic_obj_disk/: main.py
