[project]
name = "quic-obj-disk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.uv]
package = true

[tool.uv.sources]
# https://docs.astral.sh/uv/concepts/projects/workspaces/#workspace-sources
http2_api                = { workspace = true }
http3_api                = { workspace = true }
garage                  = { workspace = true }

[tool.uv.workspace]
members = [
    "apis/*",
 "kernel/garage",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "quic_obj_disk"
namespace = true
